Fix menu spacing, add link

--- a/styles/index.css
+++ b/styles/index.css
@@ -184,6 +184,7 @@ h5 {
         and margin
     */
     padding: 0;
+    padding-top: 25px;
     margin: 0;
     max-width: 200px;
 
